# BrickByBrick-AICA-Packages-Sonnet

BrickByBrick-AICA-Packages-Sonnet/: ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  aica-package.toml  inital_promt.txt
BrickByBrick-AICA-Packages-Sonnet/.devcontainer/: devcontainer.json
BrickByBrick-AICA-Packages-Sonnet/.github/workflows/: build-test.yml
BrickByBrick-AICA-Packages-Sonnet/source/brickbybrick_sonnet/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg
BrickByBrick-AICA-Packages-Sonnet/source/brickbybrick_sonnet/brickbybrick_sonnet/: dropoff_line_extractor.py  exploration_navigator.py  geometry_utils.py  jtc_command_generator.py  master_list_manager.py  pick_place_controller.py  pose_triggered_camera.py  yolo_object_detector.py
BrickByBrick-AICA-Packages-Sonnet/source/brickbybrick_sonnet/component_descriptions/: brickbybrick_sonnet_dropoff_line_extractor.json  brickbybrick_sonnet_exploration_navigator.json  brickbybrick_sonnet_jtc_command_generator.json  brickbybrick_sonnet_master_list_manager.json  brickbybrick_sonnet_pick_place_controller.json  brickbybrick_sonnet_pose_triggered_camera.json  brickbybrick_sonnet_yolo_object_detector.json
BrickByBrick-AICA-Packages-Sonnet/source/brickbybrick_sonnet/data/exploration/: ExplCords.yaml
