[options.entry_points]
python_components =
    brickbybrick_sonnet::ExplorationNavigator = brickbybrick_sonnet.exploration_navigator:ExplorationNavigator
    brickbybrick_sonnet::PoseTriggeredCamera = brickbybrick_sonnet.pose_triggered_camera:PoseTriggeredCamera
    brickbybrick_sonnet::YoloObjectDetector = brickbybrick_sonnet.yolo_object_detector:YoloObjectDetector
    brickbybrick_sonnet::DropoffLineExtractor = brickbybrick_sonnet.dropoff_line_extractor:DropoffLineExtractor
    brickbybrick_sonnet::MasterListManager = brickbybrick_sonnet.master_list_manager:MasterListManager
    brickbybrick_sonnet::PickPlaceController = brickbybrick_sonnet.pick_place_controller:PickPlaceController
    brickbybrick_sonnet::JtcCommandGenerator = brickbybrick_sonnet.jtc_command_generator:JtcCommandGenerator